--- a/robo-advisory.html
+++ b/robo-advisory.html
@@ -167,10 +167,6 @@
                                       <div class="row footer-bottom-content nav-bottom-line-effect-10 collapse d-md-flex">
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
                                           <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
-                                            href="javascript:void(0)">ROBO <br class="d-none d-sm-block" /> ADVISORY</a>
-                                        </div>
-                                        <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
-                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
                                             href="javascript:void(0)">CROWD <br class="d-none d-sm-block" /> FUNDING</a>
                                         </div>
                                         <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
@@ -178,6 +174,11 @@
                                             href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
                                             TRANSFORMATION</a>
                                         </div>
+                                        <!-- <div class="col-lg-4 col-md-6 col-12 line-height-1 mb-0 mb-md-3">
+                                          <a class="alternative-font-2 text-1 text-color-light font-weight-light overflow-visible line-height-firefox-menu"
+                                            href="javascript:void(0)">DIGITAL <br class="d-none d-sm-block" />
+                                            TRANSFORMATION</a>
+                                        </div> -->
                                       </div>
                                     </div>
                                   </div>
@@ -699,12 +700,10 @@
                     SCHEDULE A DEMO
                   </p>
                   <p class="h2 font-weight-light line-height-1 ls-0 mb-3 text-dark">
-                    Tap into our wealth of experience and expertise
+                    Tap into our wealth of experience and expertise.
                   </p>
                   <p class="font-weight-light line-height-2 text-4 text-dark">
-                    Schedule a chat with one of our representatives to learn more about our Brokerage Management System
-                    and all its features
-                  </p>
+                    Schedule a chat with one of our representatives to learn more about our Robo-Advisory Management System and all of its features.</p>
                 </div>
               </div>
             </div>
